# automata

./: README.md  directorios.txt  pyproject.toml  requirements.txt
automatasjffafd/: mi_automata.jff  pares.jff
cautomatas/: cerraduras.txt  mi_automata.afd  mi_automata_raro.jff  subcadenas.txt
src/: main.py  router.py
src/utils/: load_jff.py  mk_img_automaton.py  save_automaton.py  save_jff.py  tabla_transiciones.py  utilidades.py
src/views/: calcular_cerraduras_view.py  calcular_subcadenas_view.py  definir_afd_view.py  home_view.py  simulacion_afd_view.py
test/: dict.py  load_automaton.py  save_automaton.py
