[project]
name = "Automaton"
version = "0.1.0"
description = "Nada interesante por aqui"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    { name = "Kevin Jesus (Crvcrx)", email = "kexuxifail26@gmail.com" }
]
dependencies = [
  "flet==0.28.3"
]

[tool.flet]
org = "com.crvcrx"

product = "automaton"

# company name to display in about app dialogs
company = "Crvcrx"


[tool.flet.app]
path = "src"

[tool.uv]
dev-dependencies = [
    "flet[all]==0.28.3",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
flet = {extras = ["all"], version = "0.28.3"}